# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  tilemap.json
dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py  index_editor.py  index_game.py
src/scripts/: constants.py  editor.py  editor_tilemap.py  entities.py  game.py  menu.py  particle.py  particle_system.py  player.py  tilemap.py  utils.py
src/scripts/editor/: editor.py
src/scripts/entities/: physics_entity.py  player.py
src/scripts/game/: app_state.py  game.py
src/scripts/menu/: glow_text.py  glow_text_button.py  level_button.py  line.py  menu.py
src/scripts/particles/: particle.py  particle_system.py
src/scripts/tilemap/: editor_tilemap.py  tilemap.py
src/tests/: test_player.py
tilemaps/: tilemap.json
