[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Elias Tuhola"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
pygame = "^2.6.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
autopep8 = "^2.3.1"
pytest = "^8.3.3"
coverage = "^7.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
